--- a/add_item_demo.ipynb
+++ b/add_item_demo.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e89e6748d7c746268a3d2bc5ef9c6f3b",
+       "model_id": "3fcacdede3504139a9b4191a607988c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     "    options=sorted(collection['metadata']['art_types']),\n",
     "    value=['Sculpture'],\n",
     "    rows=6,\n",
-    "    description='Type of Art:',\n",
+    "    description='Type of Art',\n",
     "    disabled=False\n",
     ")\n",
     "\n",
@@ -320,7 +320,7 @@
     "    options=sorted(collection['metadata']['warnings']),\n",
     "    value=['None'],\n",
     "    rows=6,\n",
-    "    description='Warnings:',\n",
+    "    description='Type of Art',\n",
     "    disabled=False\n",
     ")\n",
     "\n",
@@ -359,57 +359,6 @@
     "\n",
     "out"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
