--- a/add_item_demo.ipynb
+++ b/add_item_demo.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3fcacdede3504139a9b4191a607988c6",
+       "model_id": "92e1b63aa6b54a1e9a0d0891ecf4060a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +320,7 @@
     "    options=sorted(collection['metadata']['warnings']),\n",
     "    value=['None'],\n",
     "    rows=6,\n",
-    "    description='Type of Art',\n",
+    "    description='Warnings',\n",
     "    disabled=False\n",
     ")\n",
     "\n",
