Refine display results items.

--- a/plan_an_outing_demo.ipynb
+++ b/plan_an_outing_demo.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fba91aa3886d46c2ae4011c4b0f767ea",
+       "model_id": "0519430a7208496fb15a709ac24c4350",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,6 +35,12 @@
     "cred = toml.load('credentials.toml')\n",
     "appid = cred['api']['here']['appid']\n",
     "appcode = cred['api']['here']['appcode']\n",
+    "walk_10_min = cred['minute']['ten']['polygon']\n",
+    "\n",
+    "polygon = []\n",
+    "for item in walk_10_min:\n",
+    "    item = tuple(item)\n",
+    "    polygon.append(item)\n",
     "\n",
     "def open_file(library_only=True):\n",
     "    \n",
@@ -75,7 +81,28 @@
     "        \n",
     "    return point\n",
     "\n",
+    "def plot_isochrones(coordinates, isochrones, zoom_level=8):\n",
+    "    '''Initiate map and plot isochrones centered on coordinates.'''\n",
     "\n",
+    "    center = coord_to_tuple(coordinates)\n",
+    "\n",
+    "    layer_color = 'brown'\n",
+    "    fill_color = 'orange'\n",
+    "    m = ipl.Map(center=center, zoom=zoom_level)\n",
+    "    for key in isochrones.keys():\n",
+    "\n",
+    "        item = ipl.Polygon(\n",
+    "            locations=isochrones[key],\n",
+    "            color=layer_color,\n",
+    "            weight=1,\n",
+    "            fill_color=fill_color,\n",
+    "            fill_opacity=0.2,\n",
+    "            name=key)\n",
+    "        m.add_layer(item)\n",
+    "\n",
+    "    m.add_control(ipl.LayersControl())\n",
+    "\n",
+    "    return m\n",
     "\n",
     "def coord_to_tuple(coordinates):\n",
     "    \"\"\"Transform coordinates to a 2 tuple.\"\"\"\n",
@@ -117,7 +144,15 @@
     "\n",
     "    return string\n",
     "\n",
+    "def item_to_popup(new_item):\n",
+    "    \n",
+    "    output_string = str()\n",
+    "    \n",
+    "    for key,value in new_item['properties'].items():\n",
     "\n",
+    "        output_string = output_string + \"<b>\" + key.title() + \":</b>  \" + str(value) + \"</br>\"\n",
+    "    \n",
+    "    return output_string\n",
     "\n",
     "\n",
     "def display_results(x):\n",
@@ -129,17 +164,49 @@
     "    \n",
     "    center = address_to_coord(address_box.value)\n",
     "    \n",
+    "    global m\n",
     "    m = ipl.Map(center=center, zoom=16)\n",
     "\n",
     "    global marker\n",
-    "    marker= ipl.Marker(location=center, draggable=True)\n",
+    "    #marker= ipl.Marker(location=center, draggable=True)\n",
+    "    #m.add_layer(marker)\n",
     "    \n",
-    "    \n",
+    "    poly = ipl.Polygon(\n",
+    "                locations=polygon,\n",
+    "                color='brown',\n",
+    "                weight=1,\n",
+    "                fill=False,\n",
+    "                name='10 Minute Walking Distance',)\n",
+    "    m.add_layer(poly)\n",
     "\n",
-    "    m.add_layer(marker)\n",
-    "\n",
-    "    m\n",
     "    \n",
+    "    for item in collection['features']:\n",
+    "\n",
+    "        location = item['geometry']['coordinates']\n",
+    "\n",
+    "        item_properties = widgets.HTML()\n",
+    "\n",
+    "\n",
+    "\n",
+    "        item_popup = item_to_popup(item)\n",
+    "\n",
+    "        item_properties.value = item_popup\n",
+    "\n",
+    "        item_marker = ipl.Marker(location=location)\n",
+    "\n",
+    "        item_marker.title = item['properties']['name']\n",
+    "        item_marker.name = item['properties']['name']\n",
+    "        item_marker.popup = item_properties\n",
+    "\n",
+    "        marker_layer_name = item['properties']['name'].replace(\" \",\"_\")\n",
+    "        \n",
+    "\n",
+    "        vars()[marker_layer_name] = item_marker\n",
+    "\n",
+    "\n",
+    "        m.add_layer(vars()[marker_layer_name])\n",
+    "    \n",
+    "    m.add_control(ipl.LayersControl())\n",
     "    \n",
     "    with out:\n",
     "        display(m,trip_box)\n",
@@ -164,8 +231,8 @@
     "\n",
     "\n",
     "address_box = widgets.Text(\n",
-    "    value='1 Courthouse Square, Graham, NC, 27253',\n",
-    "    placeholder='1 Courthouse Square, Graham, NC, 27253',\n",
+    "    value='213 Main Street, Graham, NC, 27253',\n",
+    "    placeholder='213 Main Street, Graham, NC, 27253',\n",
     "    description='Address:',\n",
     "    layout=widgets.Layout(width='auto'),\n",
     "    disabled=False\n",
@@ -205,10 +272,18 @@
     "    icon=''\n",
     ")\n",
     "\n",
+    "create_pdf = widgets.Button(\n",
+    "    description='Output to PDF',\n",
+    "    disabled=False,\n",
+    "    button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Submit',\n",
+    "    icon=''\n",
+    ")\n",
+    "\n",
     "\n",
     "initial = [address_box, art_type, trip_warnings_select, submit]\n",
     "\n",
-    "trip_item = [trip_name_box, address_box, art_type, trip_description_box, trip_warnings_select, save]\n",
+    "trip_item = [trip_name_box, address_box, trip_description_box, save, create_pdf]\n",
     "\n",
     "box_layout = widgets.Layout(display='flex',\n",
     "                            flex_flow='column',\n",
@@ -233,328 +308,6 @@
     "\n",
     "out"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with out:\n",
-    "    display(initial)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def item_to_popup(new_item):\n",
-    "    \n",
-    "    output_string = str()\n",
-    "    \n",
-    "    for key,value in new_item['properties'].items():\n",
-    "\n",
-    "        output_string = output_string + \"<b>\" + key.title() + \":</b>  \" + str(value) + \"</br>\"\n",
-    "    \n",
-    "    return output_string\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d59d5c08a9943aca824bc72a7da35cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(basemap={'url': 'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', 'max_zoom': 19, 'attribution': 'Map …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n",
-    "item = collection['features'][0]\n",
-    "\n",
-    "for item in collection['features']:\n",
-    "\n",
-    "    location = item['geometry']['coordinates']\n",
-    "\n",
-    "    item_properties = widgets.HTML()\n",
-    "\n",
-    "\n",
-    "\n",
-    "    item_popup = item_to_popup(item)\n",
-    "\n",
-    "    item_properties.value = item_popup\n",
-    "\n",
-    "    item_marker = ipl.Marker(location=location)\n",
-    "\n",
-    "    item_marker.title = item['properties']['name']\n",
-    "    item_marker.popup = item_properties\n",
-    "\n",
-    "    marker_layer_name = item['properties']['name'].replace(\" \",\"_\")\n",
-    "\n",
-    "    vars()[marker_layer_name] = item_marker\n",
-    "\n",
-    "\n",
-    "    m.add_layer(vars()[marker_layer_name])\n",
-    "\n",
-    "\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'type': 'Feature',\n",
-       " 'geometry': {'type': 'Point', 'coordinates': [36.06968, -79.40035]},\n",
-       " 'properties': {'name': 'Feeding Hummingbird',\n",
-       "  'art_type': 'Sculpture',\n",
-       "  'address': '217 S Main St, Graham, NC 27253',\n",
-       "  'description': 'Large metal sculpture approximately 9 feet high\\n                featuring a hummingbird feeding from a flower.',\n",
-       "  'artist': 'Unknown',\n",
-       "  'approved': True}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "item"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'm' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-838c8a7a6693>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmarker\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mipl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMarker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_layer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmarker\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'm' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "marker = ipl.Marker(location=location)\n",
-    "\n",
-    "m.add_layer(marker)\n",
-    "\n",
-    "\n",
-    "item_properties = widgets.HTML()\n",
-    "\n",
-    "item_properties.value = item_popup\n",
-    "item_properties.placeholder = \"Some HTML\"\n",
-    "#item_properties.description = item_popup\n",
-    "\n",
-    "\n",
-    "# Popup associated to a layer\n",
-    "marker.popup = item_properties\n",
-    "marker.title = 'Title'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Functions to Delete.\n",
-    "\n",
-    "\n",
-    "def item_to_string(new_item):\n",
-    "    output_string = \"<b>Coordinates:</b>  \" + str(new_item['geometry']['coordinates']) + \"</br>\"\n",
-    "\n",
-    "    for key,value in new_item['properties'].items():\n",
-    "\n",
-    "        output_string = output_string + \"<b>\" + key.title() + \":</b>  \" + str(value) + \"</br>\"\n",
-    "    \n",
-    "    return output_string\n",
-    "\n",
-    "def saved_message(new_item):\n",
-    "    title = \"\"\"<h2>New Submission Accepted</h2></br>\n",
-    "                This item will become visible after it has passed through our curation and moderation process.</br></br>\"\"\"\n",
-    "    \n",
-    "    body = item_to_string(new_item)\n",
-    "    \n",
-    "    raw_html = title + body\n",
-    "    \n",
-    "    return HTML(raw_html)\n",
-    "\n",
-    "\n",
-    "def save_library(library):\n",
-    "\n",
-    "    collection = {\"type\":\"FeatureCollection\", \n",
-    "                  \"metadata\":{\"art_types\":[\"Sculpture\",\n",
-    "                                           \"Mural\",\n",
-    "                                           \"Painting\",\n",
-    "                                           \"Mosaic\",\n",
-    "                                           \"Statue\",\n",
-    "                                           \"Fountain\",\n",
-    "                                           \"Building\",\n",
-    "                                           \"Installation Art\",\n",
-    "                                           \"Mechanical Art\",\n",
-    "                                           \"Folk Art\",\n",
-    "                                           \"Experience Art\",\n",
-    "                                           \"Other\",\n",
-    "                                           \n",
-    "                                          ],\n",
-    "                              \"warnings\":[\"Adult Themes\",\n",
-    "                                           \"Daylight Only\",\n",
-    "                                           \"Private Work\",\n",
-    "                                           \"Controversial\",\n",
-    "                                           \"Distance Viewing Only\",\n",
-    "                                           \"Poor Accessibility\",\n",
-    "                                           \"No Nearby Parking\",\n",
-    "                                           \"High Crime Area\",\n",
-    "                                           \"None\",\n",
-    "                                         \n",
-    "                                          ],\n",
-    "                              \"last_updated\": str(arrow.now())\n",
-    "                             }, \n",
-    "                  \n",
-    "                  \"features\":library}\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    try:\n",
-    "        with open('library.geo.json', 'w') as w:\n",
-    "            json.dump(collection, w)\n",
-    "            \n",
-    "        return True\n",
-    "\n",
-    "    except:\n",
-    "        return False\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "def json_item(art_type=\"\",\n",
-    "              name=\"\",\n",
-    "              coordinates=None,\n",
-    "              geo_type='Point',\n",
-    "              address=\"\",\n",
-    "              description=\"\",\n",
-    "              artist=\"Unknown\",\n",
-    "              hazards=\"\",\n",
-    "              approved=False,):\n",
-    "    \n",
-    "    \n",
-    "    coordinates = marker.location\n",
-    "    \n",
-    "    item = {\n",
-    "              \"type\": \"Feature\",\n",
-    "              \"geometry\": {\n",
-    "                \"type\": geo_type,\n",
-    "                \"coordinates\": coordinates\n",
-    "              },\n",
-    "              \"properties\": {\n",
-    "                \"name\": name,\n",
-    "                  \"art_type\": art_type,\n",
-    "                  \"address\": address,\n",
-    "                  \"description\": description,\n",
-    "                  \"artist\":artist,\n",
-    "                  \"hazards\":hazards,\n",
-    "                  \"approved\": approved\n",
-    "              }\n",
-    "            }\n",
-    "    return item\n",
-    "\n",
-    "def save_new_item(x):\n",
-    "    \n",
-    "    out.clear_output(wait=True)\n",
-    "    \n",
-    "    new_item = json_item(\n",
-    "              art_type=list(art_type.value),\n",
-    "              name=name_box.value,\n",
-    "              coordinates=marker.location,\n",
-    "              geo_type='Point',\n",
-    "              address=address_box.value,\n",
-    "              description=description_box.value,\n",
-    "              artist=artist_box.value,\n",
-    "              hazards=list(warnings_select.value),\n",
-    "              approved=False,)\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    library.append(new_item)\n",
-    "    \n",
-    "    save_library(library)\n",
-    "    \n",
-    "    with out:\n",
-    "        display(saved_message(new_item))\n",
-    "    \n",
-    "marker_data = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection = open_file(library_only=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
