--- a/add_item_demo.ipynb
+++ b/add_item_demo.ipynb
@@ -1,25 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92e1b63aa6b54a1e9a0d0891ecf4060a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "source": [
+    "## Add an Item"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import ipyleaflet as ipl\n",
     "import ipywidgets as widgets\n",
